# tamagotogether

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: db.rs  handlers.rs  main.rs  models.rs
static/: index.html  script.js  style.css
