[package]
name = "tamagotogether"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
rand = "0.8"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = "8.4"
sha2 = "0.10"
mime_guess = "2.0"
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4"] }
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }
